# draw_shape

./: CMakeLists.txt  README.md
docs/: tz.md
docs/illustrations/: shapes.drawio
src/: CMakeLists.txt  main.cpp
src/Canvas/: Color.h  ICanvas.h  SFMLCanvas.h
src/Commands/: AddShapeCommand.h  AllCommands.h  CommandParser.h  DrawPictureCommand.h  ICommand.h  ListShapesCommand.h
src/Commands/CommandImpl/: AddShapeCommand.h  DeleteShapeCommand.h  DrawPictureCommand.h  ListShapesCommand.h  MovePictureCommand.h  MoveShapeCommand.h
src/Figures/: CircleStrategy.h  IShapeStrategy.h  RectangleStrategy.h  ShapeFactory.cpp  ShapeFactory.h  TriangleStrategy.h
src/Figures/Strategy/: CircleStrategy.h  LineStrategy.h  RectangleStrategy.h  TextStrategy.h  TriangleStrategy.h
src/Shape/: Picture.h  Shape.h
tests/: CMakeLists.txt
